# stock-price

./: Pipfile  README.md  pyproject.toml
notebooks/: nikkei-tech.ipynb  nikkei.ipynb
